--- a/src/css/photo-grid.css
+++ b/src/css/photo-grid.css
@@ -1,3 +1,17 @@
-#runnersRow .panel {
-    min-height: 340px;
+@media only screen and (max-width: 520px) {
+    #runnersRow .bib .panel img {
+        height: auto;
+        width: 100%;
+    }
 }
+
+@media only screen and (min-width: 521px) {
+
+    #runnersRow .col-md-4 .panel img,
+    #runnersRow .col-sm-6 .panel img,
+    #runnersRow .col-lg-3 .panel img {
+        height: 155px;
+        width: 100%;
+    }
+}
+
