--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -1,4 +1,4 @@
-#collapsible {
+.collapsible {
     background-color: rgb(223, 223, 223);
     color: #444;
     cursor: pointer;
@@ -15,11 +15,11 @@
 }
 
 #active,
-#collapsible:hover {
+.collapsible:hover {
     background-color: rgb(205, 205, 205);
 }
 
-#subscribe_content {
+.collapsible_content {
     display: none;
     padding-top: 10px;
     padding-right: 20px;
